--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,14 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O\n"
+      "['O', 'O', 'C', 'C', 'C', 'C', '1', 'j', 'C', 'D']\n",
+      "C\n"
      ]
     }
    ],
@@ -191,10 +192,58 @@
     "    get_distances(distances,vector1) # 遍历指定目录下的所有文件\n",
     "    sorted_data=sort_result(distances, labels) # 对距离和标签进行排序\n",
     "    k=3 # KNN 算法的 K 值，可替换\n",
-    "    result=get_top_K(sorted_data,3) # 获取前五个最小距离的元组\n",
+    "    result=get_top_K(sorted_data,10) # 获取前K个最小距离的元组\n",
+    "    \n",
     "    result=most_neibor(result) # 统计列表中出现频率最大的元素\n",
     "    print(result) # 输出结果"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
